# Claude-powered-AI-native-financial-dashboard

./: .env.docker.example  .env.local.example  .gitignore  README.md  docker-compose.yml  install.sh  package-lock.json  package.json
agent/: .env.example  connect_real_account.py  fetch_transactions.py  import_gui.py  plaid_config.py  poll_refresh.py  pyproject.toml  run_analyze.py  run_pipeline.py  run_pipeline.sh  run_pipeline_fixed.py  server.py  sync_to_supabase.py
agent/csv_import/: __init__.py  csv_to_supabase.py  parse_holdings.py  parse_transactions.py
agent/csv_import/samples/: sample_holdings.csv  sample_transactions.csv
agent/notebooks/: 02_fetch_holdings.ipynb  02b_fetch_transactions.ipynb  02c_import_csv.ipynb  03_data_enrichment.ipynb  04_claude_analysis.ipynb  05_notifications.ipynb
scripts/: generate-keys.sh  generate-totp-secret.sh  init-db.sh  purge_csv_data.sh
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/analysis/: page.tsx
src/app/breakdown/: BreakdownClient.tsx  page.tsx
src/app/gains/: GainsClient.tsx  page.tsx
src/app/holdings/: page.tsx
src/app/login/: page.tsx
src/app/transactions/: page.tsx
src/components/dashboard/: category-cards.tsx  dashboard-content.tsx  net-worth-card.tsx  rsu-widget.tsx
src/components/layout/: header.tsx  sidebar.tsx
src/lib/: constants.ts
supabase/: kong.yml
supabase/migrations/: 002_transactions_and_gains.sql  003_add_source_column.sql  004_add_account_categories_json.sql  005_refresh_request_type.sql  006_add_retirement_summary.sql  007_add_roll_action.sql
(+23 files in other folders)
